sandbox/output
Reorder.java:25: error: cannot find symbol
                List<Integer> newList = newArrayList<Integer>(result1.get(0));
                                        ^
  symbol:   variable newArrayList
  location: class Reorder
Reorder.java:25: error: cannot find symbol
                List<Integer> newList = newArrayList<Integer>(result1.get(0));
                                                     ^
  symbol:   variable Integer
  location: class Reorder
2 errors
